--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: kramdown
 highlighter: rouge
 title: "Chris Luedtke"
-subtitle: "Data Scientist · Civic Technologist · Creative"
+subtitle: "Cloud and Data Engineer · Cincinnati"
 author: "Chris Luedtke"
 collections:
   tags:
